k8s/ai.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-ai
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ai
  template:
    metadata:
      labels:
        app: ai
    spec:
      containers:
        - name: ai
          image: whrjsgml0000/carely_ai:1
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-ai
spec:
  selector:
    app: ai
  ports:
    - port: 80
      targetPort: 8000
