k8s/be.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: be
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be
  namespace: be
spec:
  replicas: 3
  selector:
    matchLabels:
      app: be
  template:
    metadata:
      labels:
        app: be
    spec:
      containers:
        - name: be
          image: whrjsgml0000/carely_be:1.0.1
          # resources:
          #   limits:
          #     memory: "2Gi"
          #     cpu: "1.0"
          #   requests:
          #     memory: "1Gi"
          #     cpu: "0.5"
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: svc-be
  namespace: be
spec:
  selector:
    app: be
  ports:
    - port: 80
      targetPort: 8081
  type: LoadBalancer
